--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Diego Collares <diego.collares@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
