--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Diego Collares <diego.collares@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "5.12.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
